--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+  <link rel="stylesheet" href="starg3n.github.io/style.css">
+</head>
 <title> Nintendo DS Emulator - Powered by desmond</title>
   <body>
     <desmond-player id="player"></desmond-player>
