--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="starg3n.github.io/style.css">
+  <title>☆ starg3n ds ☆</title>
+  <link rel="icon" type="image/x-icon" href="https://starg3n.github.io/data/favicon.ico">
 </head>
-<title> Nintendo DS Emulator - Powered by desmond</title>
   <body>
     <desmond-player id="player"></desmond-player>
     <script src="desmond.min.js"></script>
