--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="starg3n.github.io/style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>☆ starg3n ds ☆</title>
   <link rel="icon" type="image/x-icon" href="https://starg3n.github.io/data/favicon.ico">
 </head>
