--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="icon" type="image/x-icon" href="https://starg3n.github.io/data/favicon.ico">
 </head>
   <body>
+    <a href="https://starg3n.github.io"><img src="/data/favicon.ico"></img></a>
+    <b><h1>☆ starg3n ds emulator☆</h1></b>
     <desmond-player id="player"></desmond-player>
     <script src="desmond.min.js"></script>
     <script>
