--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <link rel="stylesheet" href="https://starg3n.github.io/data/style.css">
+  <link rel="stylesheet" href="https://AprilJMystery.github.io/data/style.css">
   <title>☆ starg3n ds ☆</title>
-  <link rel="icon" type="image/x-icon" href="https://starg3n.github.io/data/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://AprilJMystery.github.io/data/favicon.ico">
 </head>
   <body>
     <desmond-player id="player"></desmond-player>
@@ -10,7 +10,7 @@
     <script>
     document.getElementById("player").loadURL("path-to-game.nds");
     </script>
-        <a href="https://starg3n.github.io"><img src="/data/favicon.ico"></img></a>
+        <a href="https://AprilJMystery.github.io"><img src="/data/favicon.ico"></img></a>
     <b><h1>☆ starg3n ds emulator☆</h1></b>
   </body>
 </html>
